ajuste na configuração

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <!-- <body class="bg-gradient-to-r from-slate-500 to-slate-800 py-4"> -->
 
-<body class="bg-rose-50 py-4">
+<body class="bg-fundo-site py-4 bg-cover bg-center">
   <app-root></app-root>
 
   <footer class="flex flex-row justify-center bottom-4 pt-8 text-sm">
