--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<!-- <body class="bg-gradient-to-r from-slate-500 to-slate-800 py-4"> -->
-
-<body class="bg-fundo-site py-4 bg-cover bg-center">
+<body class="bg-fundo-site py-8 bg-cover bg-center bg-no-repeat h-[100vh]">
   <app-root></app-root>
 
-  <footer class="flex flex-row justify-center bottom-4 pt-8 text-sm">
+  <footer class="flex flex-row justify-center bottom-4 text-sm">
     <p class="text-center text-rose-300">© 2024 created by
       <a href="https://pablosantos.dev" target="_blank" rel="noopener noreferrer" class="hover:cursor-pointer hover:text-cyan-400  font-bold duration-500">Pablo Santos</a>
     </p>
