--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="bg-fundo-site py-8 bg-cover bg-center bg-no-repeat h-[100vh]">
+<body class="bg-fundo-site py-8 bg-cover bg-center ">
   <app-root></app-root>
 
-  <footer class="flex flex-row justify-center bottom-4 text-sm">
+  <footer class="flex flex-row justify-center bottom-4 mt-8 text-sm">
     <p class="text-center text-rose-300">© 2024 created by
       <a href="https://pablosantos.dev" target="_blank" rel="noopener noreferrer" class="hover:cursor-pointer hover:text-cyan-400  font-bold duration-500">Pablo Santos</a>
     </p>
